# backend/docs/swagger.json
@@ -940,40 +940,6 @@
             }
         },
         "/users": {
-            "get": {
-                "description": "Read a list of users",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Read a list of users",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/users.Users"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
             "post": {
                 "description": "Create a new user",
                 "consumes": [
@@ -1016,16 +982,16 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/users/search/{search_term}": {
             "get": {
-                "description": "Read a single user by: id",
+                "description": "Read a list of users by: search_term",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Read a single user by: id",
+                "summary": "Read a list of users by: search_term",
                 "parameters": [
                     {
                         "type": "string",
@@ -1037,9 +1003,8 @@
                     },
                     {
                         "type": "string",
-                        "format": "uuid",
-                        "description": "User ID",
-                        "name": "id",
+                        "description": "User Search Term",
+                        "name": "search_term",
                         "in": "path",
                         "required": true
                     }
@@ -1048,7 +1013,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/users.User"
+                            "$ref": "#/definitions/users.Users"
                         }
                     },
                     "400": {
@@ -1061,7 +1026,55 @@
                         "description": "Internal Server Error"
                     }
                 }
-            },
+            }
+        },
+        "/users/{id_list}": {
+            "get": {
+                "description": "Read a list of users by: id_list",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Read a list of users by: id_list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User ID List",
+                        "name": "id_list",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/users.Users"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
             "post": {
                 "description": "Update a single user by: id",
                 "consumes": [
